--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -1,69 +1,51 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container mt-4">
-    <h1>Register</h1>
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
             <div class="card">
+                <div class="card-header">{{ title }}</div>
                 <div class="card-body">
-                    <form method="POST">
+                    <form method="POST" action="">
                         {{ form.hidden_tag() }}
                         <div class="form-group">
-                            {{ form.username.label(class="form-label") }}
-                            {{ form.username(class="form-control") }}
-                            {% for error in form.username.errors %}
-                            <span class="text-danger">{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                        <div class="form-group">
-                            {{ form.email.label(class="form-label") }}
-                            {{ form.email(class="form-control") }}
-                            {% for error in form.email.errors %}
-                            <span class="text-danger">{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                        <div class="form-group">
-                            {{ form.password.label(class="form-label") }}
+                            {{ form.password.label(class="form-control-label") }}
                             <div class="input-group">
                                 {{ form.password(class="form-control") }}
                                 <button type="button" class="password-toggle" id="togglePassword1">
                                     <i class="fas fa-eye"></i>
                                 </button>
                             </div>
-                            {% for error in form.password.errors %}
-                            <span class="text-danger">{{ error }}</span>
-                            {% endfor %}
+                            {% if form.password.errors %}
+                                <div class="invalid-feedback">
+                                    {% for error in form.password.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
                         </div>
                         
                         <div class="form-group">
-                            {{ form.password2.label(class="form-label") }}
+                            {{ form.password2.label(class="form-control-label") }}
                             <div class="input-group">
                                 {{ form.password2(class="form-control") }}
                                 <button type="button" class="password-toggle" id="togglePassword2">
                                     <i class="fas fa-eye"></i>
                                 </button>
                             </div>
-                            {% for error in form.password2.errors %}
-                            <span class="text-danger">{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                        <div class="form-group">
-                            {{ form.type.label(class="form-label") }}
-                            {{ form.type(class="form-control") }}
-                            {% for error in form.type.errors %}
-                            <span class="text-danger">{{ error }}</span>
-                            {% endfor %}
+                            {% if form.password2.errors %}
+                                <div class="invalid-feedback">
+                                    {% for error in form.password2.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
                         </div>
                         <div class="form-group">
                             {{ form.submit(class="btn btn-primary") }}
                         </div>
                     </form>
-                    <div class="mt-3">
-                        <p class="text-muted">
-                            Already have an account? <a href="{{ url_for('auth.login') }}">Login here</a>
-                        </p>
-                    </div>
                 </div>
             </div>
         </div>
